--- a/YOURData/Pages/Members/Index.cshtml
+++ b/YOURData/Pages/Members/Index.cshtml
@@ -31,7 +31,7 @@
       <div id="members-table-wrapper">
         <!-- Table Header -->
         <table class="table mb-0" id="members-table-header" style="table-layout: fixed; width:100%;">
-          <colgroup>
+          <colgroup>a
             <col style="width:70px;">
             <col style="width:150px;">
             <col>
