- adjust paginate color, circle option - custom-select hover bg-color

--- a/YOURData/Pages/Members/Index.cshtml
+++ b/YOURData/Pages/Members/Index.cshtml
@@ -23,7 +23,7 @@
           </select>
         </div>
         <nav>
-          <ul class="pagination mb-0" id="pagination-controls"></ul>
+          <ul class="pagination page-circle mb-0" id="pagination-controls"></ul>
         </nav>
       </div>
 
@@ -31,7 +31,7 @@
       <div id="members-table-wrapper">
         <!-- Table Header -->
         <table class="table mb-0" id="members-table-header" style="table-layout: fixed; width:100%;">
-          <colgroup>a
+          <colgroup>
             <col style="width:70px;">
             <col style="width:150px;">
             <col>
