- begin member-edit

--- a/YOURData/Pages/Members/Index.cshtml
+++ b/YOURData/Pages/Members/Index.cshtml
@@ -65,8 +65,10 @@
 </div>
 
 @section Scripts {
-  <script src="~/js/members.js" asp-append-version="true"></script>
+  <script src="~/js/member.js" asp-append-version="true"></script>
+  <script src="~/js/member-edit.js" asp-append-version="true"></script>
 }
 @section Styles {
-  <link href="~/css/members.css" asp-append-version="true" rel="stylesheet" />
+  <link href="~/css/member.css" asp-append-version="true" rel="stylesheet" />
+  <link href="~/css/member-edit.css" asp-append-version="true" rel="stylesheet" />
 }
