--- a/YOURData/Pages/Shared/_Menu1.cshtml
+++ b/YOURData/Pages/Shared/_Menu1.cshtml
@@ -7,6 +7,11 @@
         <i class="bi bi-app"></i> Members
       </a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link text-white" href="/gpt.member/index">
+        <i class="bi bi-app"></i> Editable List
+      </a>
+    </li>
   </ul>
 
   <hr /><div class="text-secondary fw-semibold small text-uppercase">Accounts</div>
