- append email to appdata - modify some editable

--- a/YOURData/Pages/Members/Index.cshtml
+++ b/YOURData/Pages/Members/Index.cshtml
@@ -32,13 +32,15 @@
         <!-- Table Header -->
         <table class="table mb-0" id="members-table-header" style="table-layout: fixed; width:100%;">
           <colgroup>
-            <col style="width:70px;">
-            <col style="width:150px;">
-            <col>
+            <col style="width:70px;" />
+            <col />
+            <col />
+            <col />
           </colgroup>
           <thead class="sticky-top">
             <tr>
-              <th style="text-align:center;">Picture</th>
+              <th style="text-align:center;">Photo</th>
+              <th>Email</th>
               <th>Name</th>
               <th>Action</th>
             </tr>
@@ -50,9 +52,10 @@
       <div id="members-table-body-wrapper">
         <table class="table mb-0" id="members-table-body" style="table-layout: fixed; width:100%;">
           <colgroup>
-            <col style="width:70px;">
-            <col style="width:150px;">
-            <col>
+            <col style="width:70px;" />
+            <col />
+            <col />
+            <col />
           </colgroup>
           <tbody>
             <!-- JS populates rows -->
