--- a/YOURData/Pages/Shared/_Menu1.cshtml
+++ b/YOURData/Pages/Shared/_Menu1.cshtml
@@ -8,7 +8,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link text-white" href="/gpt.member/index">
+      <a class="nav-link text-white" href="/member2/index">
         <i class="bi bi-app"></i> Editable List
       </a>
     </li>
