- revise page folder name Members -> Member

--- a/YOURData/Pages/Shared/_Menu1.cshtml
+++ b/YOURData/Pages/Shared/_Menu1.cshtml
@@ -3,7 +3,7 @@
   <div class="text-secondary fw-semibold small text-uppercase">Accounts</div>
   <ul class="nav flex-column">
     <li class="nav-item">
-      <a class="nav-link text-white" href="/members/index">
+      <a class="nav-link text-white" href="/member/index">
         <i class="bi bi-app"></i> Members
       </a>
     </li>
